--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,13 @@
-name: isolate
-version: 2.1.1
+name: isolate_plus
+version: 2.2.0
 description: >-
-  DISCONTINUED PACKAGE
-  Utility functions and classes related to the 'dart:isolate' library.
-homepage: https://github.com/dart-lang/isolate
+  A modernized fork of dart-archive/isolate. Utility functions and classes 
+  related to the 'dart:isolate' library. Supports Dart SDK 3.3.0+.
+homepage: https://github.com/arcticfox1919/isolate_plus
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=3.3.0'
 
 dev_dependencies:
-  lints: ^1.0.0
-  test: ^1.0.0
+  lints: ^4.0.0
+  test: ^1.25.7
