--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,13 +1,16 @@
 include: package:lints/recommended.yaml
+
 analyzer:
   errors:
-    deprecated_member_use_from_same_package: ignore # https://github.com/dart-lang/linter/issues/2703
-    void_checks: ignore # https://github.com/dart-lang/linter/issues/2685
+    # Allow deprecated members to be used within the same package
+    # This is necessary for backward compatibility during deprecation periods
+    deprecated_member_use_from_same_package: ignore
+
 linter:
   rules:
+    # Additional recommended rules for package development
     - avoid_unused_constructor_parameters
     - cancel_subscriptions
     - directives_ordering
-    - package_api_docs
     - test_types_in_equals
     - throw_in_finally
