--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ description: >-
 homepage: https://github.com/arcticfox1919/isolate_plus
 
 environment:
-  sdk: '>=3.3.0'
+  sdk: '>=3.3.0 <4.0.0'
 
 dev_dependencies:
   lints: ^4.0.0
