--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,6 +4,7 @@ description: >-
   A modernized fork of dart-archive/isolate. Utility functions and classes 
   related to the 'dart:isolate' library. Supports Dart SDK 3.3.0+.
 homepage: https://github.com/arcticfox1919/isolate_plus
+repository: https://github.com/arcticfox1919/isolate_plus
 
 environment:
   sdk: '>=3.3.0 <4.0.0'
